[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid = "0.12.0"
indicatif = { version = "0.17.7", features = ["rayon", "improved_unicode"] }
itertools = "0.12.0"
line_drawing = "1.0.0"
num = "0.4.1"
pathfinding = "4.6.0"
queues = "1.1.0"
rayon = "1.8.0"
regex = "1.10.2"
